@@ -3,6 +3,9 @@ ChangeLog for ARQ
 
 ==== ARQ 2.8.1
 
++ Some JMX management exposed: Object names start "com.hp.hpl.jena.sparql". 
+  Details include: system and version information, query execution count, 
+    last query and the time execution started. 
 
 ==== ARQ 2.8.0
 
